--- a/FizzBuzz.Test/FizzBuzz.Test.csproj
+++ b/FizzBuzz.Test/FizzBuzz.Test.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FizzBuzz\FizzBuzz.csproj" />
+  </ItemGroup>
+
 </Project>
